wordpress/wp-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wp-namespace
spec: {}
status: {}
