wordpress/wp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  namespace: wp-namespace
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: wordpress:4.8-apache
        resources: {}
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name:  wp-pv
          mountPath:  /var/www/html
      volumes:
      - name: wp-pv
        persistentVolumeClaim:
          claimName: wp-pvc
