wordpress/wp-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wp-namespace
  name: wp-mysql
  labels:
    app: wp-deployment
spec:
  selector:
    matchLabels:
      app: wp-deployment
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wp-deployment
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-pv
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-pv
        persistentVolumeClaim:
          claimName: mysql-pvc
