wordpress/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wp-namespace
  labels:
    app: mysql-service
  name: mysql-service
spec:
  ports:
  - name: mysql-port
    port: 3306
    protocol: TCP
  selector:
    app: wp-deployment
    tier: mysql
  clusterIP: None
status:
  loadBalancer: {}
