wordpress/wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-service
  namespace: wp-namespace
  labels:
    app: wp-deployment
spec:
  selector:
    app: wp-deployment
    tier: frontend
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
